--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -5,15 +5,15 @@
 page_data:
   main:
     header: "Projects"
-    info: "Your Project page description."
+    info: "Completed and In Progress Projects"
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
-    img: ":projects-heading.jpg"
+    #img: ":projects-heading.jpg"
     back_color: "lightblue"
 
   category:
-    - title: "Example"
-      type: id_example
+    - title: "Python"
+      type: id_python
       color: "gray"
     - title: "Picture"
       type: id_picture
@@ -24,12 +24,12 @@ page_data:
 
   list:
     # example
-    - type: id_example
-      project_name: "Example Project"
-      project_excerpt: "Examples"
+    - type: id_python
+      project_name: "Blackjack"
+      project_excerpt: "Basic single player blackjack"
       img: ":project1_thumb.jpg"
       img_title: "img title1"
-      date: "2021-03-13"
+      date: "2023-04-17"
       post: |
         # Examples
 
